test/conformance/chainsaw/generate/foreach/clusterpolicy/clone/sync/cpol-clone-list-sync-update-source/1-0-existing.yaml
apiVersion: rbac.authorization.k8s.io/v1
kind: ClusterRole
metadata:
  name: kyverno:cpol-clone-list-sync-update-source
  labels:
    rbac.kyverno.io/aggregate-to-background-controller: "true"
    rbac.kyverno.io/aggregate-to-admission-controller: "true"
rules:
- apiGroups:
  - ''
  resources:
  - secrets
  verbs:
  - get
  - list
  - create
  - update
  - delete
  - patch
---
apiVersion: v1
kind: Namespace
metadata:
  name: foreach-cpol-clone-list-sync-update-source-existing-ns
---
apiVersion: v1
data:
  foo: YmFy
kind: Secret
metadata:
  labels:
    allowedToBeCloned: "true"
    location: europe
  name: mysecret-1
  namespace: foreach-cpol-clone-list-sync-update-source-existing-ns
type: Opaque
---
apiVersion: v1
data:
  foo: YmFy
kind: Secret
metadata:
  labels:
    allowedToBeCloned: "false"
    location: europe
  name: mysecret-2
  namespace: foreach-cpol-clone-list-sync-update-source-existing-ns
type: Opaque
---
apiVersion: v1
kind: Namespace
metadata:
  name: foreach-cpol-clone-list-sync-update-source-target-ns-1
---
apiVersion: v1
kind: Namespace
metadata:
  name: foreach-cpol-clone-list-sync-update-source-target-ns-2
