test/conformance/chainsaw/generate/foreach/clusterpolicy/clone/sync/cpol-clone-list-sync-update-source/4-1-update-source.yaml
apiVersion: v1
data:
  foo: bm90LWJhcg==
kind: Secret
metadata:
  labels:
    allowedToBeCloned: "true"
    location: europe
  name: mysecret-1
  namespace: foreach-cpol-clone-list-sync-delete-source-existing-ns
type: Opaque
