test/conformance/chainsaw/generate/foreach/clusterpolicy/clone/sync/cpol-clone-list-sync-update-source/4-2-updated-target.yaml
apiVersion: v1
data:
  foo: bm90LWJhcg==
kind: Secret
metadata:
  labels:
    allowedToBeCloned: "true"
    location: europe
  name: mysecret-1
  namespace: foreach-cpol-clone-list-sync-update-source-target-ns-1
type: Opaque
