test/conformance/chainsaw/generate/foreach/clusterpolicy/clone/sync/cpol-clone-list-sync-update-source/1-2-policy-assert.yaml
apiVersion: kyverno.io/v2beta1
kind: ClusterPolicy
metadata:
  name: foreach-cpol-clone-list-sync-update-source
status:
  conditions:
  - reason: Succeeded
    status: "True"
    type: Ready
