test/conformance/chainsaw/generate/foreach/clusterpolicy/clone/sync/cpol-clone-list-sync-update-source/chainsaw-test.yaml
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  creationTimestamp: null
  name: cpol-clone-list-sync-delete-source
spec:
  steps:
  - name: step-01
    try:
    - apply:
        file: 1-0-existing.yaml
    - apply:
        file: 1-1-policy.yaml
    - assert:
        file: 1-2-policy-assert.yaml
  - name: step-02
    try:
    - apply:
        file: 2-1-trigger.yaml
  - name: step-03
    try:
    - assert:
        file: 3-1-target-expected.yaml
    - error:
        file: 3-2-target-none-expected.yaml
  - name: step-04
    try:
    - apply:
        file: 4-1-update-source.yaml
    - assert:
        file: 3-1-target-expected.yaml
